Updated to a more modern Java release, we now compile with JDK 16 isntead of 10